--- a/style.css
+++ b/style.css
@@ -7,29 +7,40 @@ h1 {
 	font-size: 50px;
 }
 
+h2 {
+	font-size: 40px;
+}
+
+p {
+	text-align: justify;
+}
+
 .orange-color {
 	color: orange;
 }
 
-section {
+.flexible-content {
 	display: flex;
-	margin-bottom: 150px;
+	height: 500px;
+	padding-bottom: 150px;
 }
 
 .half_width {
-	width: 50%;
-	padding-left: 5%;
+	width: 40%;
+	float: left;
+	margin-right: 3%;
+	padding-left: 4%;
 }
 
 .half_width img {
-	width: 75%;
+	width: 90%;
 }
 
 .link-button {
 	text-transform: uppercase;
 	text-decoration: none;
 	color: white;
-	background-image: linear-gradient(Tomato, Orange);
+	background-image: linear-gradient(Orange, Tomato);
 	font-weight: 700;
 	padding: 10px 40px;
 	border-radius: 5px;
@@ -48,4 +59,38 @@ section {
 	background-image: url(images/dream-bg.png);
 	background-repeat: no-repeat;
 	background-position: right;
+}
+.experience {
+	background-image: url(images/exp-bg.png);
+	background-repeat: no-repeat;
+	background-position: left;
+}
+.experience h1 {
+	margin-left: 70px;
+}
+
+.box {
+	width: 40%;
+	margin-left: 5%;
+	margin-right: 5%;
+	height: 80%;
+	padding: 15px;
+	text-align: justify;
+	box-shadow: 10px 10px 40px grey;
+	border-radius: 5px;
+}
+#box-1 {
+	border-left: 7px solid;
+	border-image: linear-gradient(Orange, Tomato, Tomato);
+	border-image-slice: 1;
+}
+
+#box-2 {
+	border-left: 7px solid;
+	border-image: linear-gradient(rgb(58, 56, 52), SlateBlue);
+	border-image-slice: 5;
+}
+
+footer p {
+	text-align: center;
 }
